--- a/Views/TeachingAssistant/ResultApply.cshtml
+++ b/Views/TeachingAssistant/ResultApply.cshtml
@@ -182,7 +182,7 @@
                         <div class="col-md-6">
                             <div class="mb-3">
                                 <label class="form-label" for="ngaysinh">Ngày sinh <span class="text-danger">*</span></label>
-                                <input name="@tksv.ID" value="@(tksv.NgaySinh.Value == null ? "" : tksv.NgaySinh.Value.ToString("yyyy-MM-dd"))" type="text" id="ngaysinh" class="form-control flatpickr" placeholder="Chọn ngày sinh">
+                                <input name="@tksv.ID" value="@(tksv.NgaySinh == null ? "" : tksv.NgaySinh.Value.ToString("yyyy-MM-dd"))" type="text" id="ngaysinh" class="form-control flatpickr" placeholder="Chọn ngày sinh">
                                 <span class="text-danger" id="valid-ngaysinh"></span>
                             </div>
                         </div>
