--- a/Views/Shared/_DepartmentLayout.cshtml
+++ b/Views/Shared/_DepartmentLayout.cshtml
@@ -2,6 +2,10 @@
 <!doctype html>
 <html lang="vi">
 <head>
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
+
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
