--- a/Views/Users/_Index.cshtml
+++ b/Views/Users/_Index.cshtml
@@ -90,7 +90,7 @@
                         <span>Phòng đào tạo</span>
                     </div>
                     <div>
-                        <span class="bg-light-secondary icon-shape icon-xl rounded-3 text-dark-secondary">
+                        <span class="bg-light-danger icon-shape icon-xl rounded-3 text-dark-danger">
                             <i style="font-size: 24px" class="bi bi-person-rolodex"></i>
                         </span>
                     </div>
